--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.13.1",
     "node-sass": "^5.0.0",
+    "rc-pagination": "^3.1.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-player": "^2.9.0",
